--- a/olingo/lib/server-api/pom.xml
+++ b/olingo/lib/server-api/pom.xml
@@ -36,16 +36,23 @@
 
   <dependencies>
     <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>${jakarta-servlet.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.olingo</groupId>
       <artifactId>odata-commons-api</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
+<!--    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>${servlet.version}</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>-->
     <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
