--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -108,10 +108,16 @@
         <artifactId>slf4j-api</artifactId>
         <version>${sl4j.version}</version>
       </dependency>
-      <dependency>
+      <!--<dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>${servlet.version}</version>
+      </dependency>-->
+      <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${jakarta-servlet.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
