--- a/olingo/lib/server-api/pom.xml
+++ b/olingo/lib/server-api/pom.xml
@@ -28,7 +28,7 @@
   <name>${project.artifactId}</name>
 
   <parent>
-    <groupId>org.apache.olingo</groupId>
+    <groupId>nl.buildforce.olingo</groupId>
     <artifactId>OData4-lib</artifactId>
     <version>4.8.1</version>
     <relativePath>..</relativePath>
@@ -43,21 +43,11 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.olingo</groupId>
+      <groupId>nl.buildforce.olingo</groupId>
       <artifactId>odata-commons-api</artifactId>
       <version>${project.version}</version>
     </dependency>
-<!--    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>${servlet.version}</version>
-      <scope>provided</scope>
-    </dependency>-->
-    <!--<dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec-http</artifactId>
-    </dependency>-->
-    <!-- Test dependencies -->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -82,16 +72,16 @@
         <configuration>
           <instructions>
             <Export-Package>
-              org.apache.olingo.server.api*,
-              org.apache.olingo.netty.server.api*
+              nl.buildforce.olingo.server.api*,
+              nl.buildforce.olingo.netty.server.api*
             </Export-Package>
             <Import-Package>
               *
             </Import-Package>
             <!-- workaround due to the current server-api server-core interdependency -->
             <DynamicImport-Package>
-              org.apache.olingo.netty.server.core,
-              org.apache.olingo.server.core
+              nl.buildforce.olingo.netty.server.core,
+              nl.buildforce.olingo.server.core
             </DynamicImport-Package>
           </instructions>
         </configuration>
