--- a/sequoia/odata4-jpa-annotation/pom.xml
+++ b/sequoia/odata4-jpa-annotation/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>nl.buildforce.sequoia</groupId>
-		<artifactId>sequoia</artifactId>
+		<artifactId>Sequoia-parent</artifactId>
 		<version>0.3.8-M0</version>
 	</parent>
 	<artifactId>odata4-jpa-annotation</artifactId>
@@ -13,7 +13,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.olingo</groupId>
+			<groupId>nl.buildforce.olingo</groupId>
 			<artifactId>odata-commons-api</artifactId>
 			<version>${odata.version}</version>
 		</dependency>
