--- a/sequoia/odata4-jpa-coverage/pom.xml
+++ b/sequoia/odata4-jpa-coverage/pom.xml
@@ -4,16 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>nl.buildforce.sequoia</groupId>
-		<artifactId>sequoia</artifactId>
+		<artifactId>Sequoia-parent</artifactId>
 		<version>0.3.8-M0</version>
 	</parent>
 
 	<artifactId>odata4-jpa-coverage</artifactId>
 	<name>odata4-jpa-coverage</name>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<dependencies>
 		<dependency>
