--- a/sequoia/odata4-jpa-metadata/pom.xml
+++ b/sequoia/odata4-jpa-metadata/pom.xml
@@ -6,16 +6,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
-        <artifactId>sequoia</artifactId>
+        <artifactId>Sequoia-parent</artifactId>
         <version>0.3.8-M0</version>
     </parent>
 
     <artifactId>odata4-jpa-metadata</artifactId>
 
     <name>odata4-jpa-metadata</name>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     <dependencies>
         <!-- Testing -->
         <dependency>
@@ -35,18 +32,18 @@
             <version>${jakarta.persistence.api}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.olingo</groupId>
+            <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-server-core</artifactId>
             <version>${odata.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.olingo</groupId>
+            <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-commons-api</artifactId>
             <version>${odata.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.olingo</groupId>
+            <groupId>nl.buildforce.olingo</groupId>
             <artifactId>odata-server-api</artifactId>
             <version>${odata.version}</version>
         </dependency>
