--- a/sequoia/odata4-jpa-processor/pom.xml
+++ b/sequoia/odata4-jpa-processor/pom.xml
@@ -6,28 +6,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>nl.buildforce.sequoia</groupId>
-		<artifactId>sequoia</artifactId>
+		<artifactId>Sequoia-parent</artifactId>
 		<version>0.3.8-M0</version>
 	</parent>
 
 	<artifactId>odata4-jpa-processor</artifactId>
 
 	<name>odata4-jpa-processor</name>
-	<properties>
-		<jakarta-servlet.version>5.0.0-M1</jakarta-servlet.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+
 	<dependencies>
-		<!--<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>${jackson.version}</version>
-		</dependency>-->
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
@@ -35,27 +22,17 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!--<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>4.0.1</version>
-			<scope>provided</scope>
-		</dependency>-->
 		<dependency>
-			<groupId>org.apache.olingo</groupId>
+			<groupId>nl.buildforce.olingo</groupId>
 			<artifactId>odata-server-api</artifactId>
 			<version>${odata.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.olingo</groupId>
+			<groupId>nl.buildforce.olingo</groupId>
 			<artifactId>odata-server-core</artifactId>
 			<version>${odata.version}</version>
 		</dependency>
-		<!--<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-annotation</artifactId>
-			<version>${project.version}</version>
-		</dependency>-->
+
 		<dependency>
 			<groupId>nl.buildforce.sequoia</groupId>
 			<artifactId>odata4-jpa-metadata</artifactId>
