--- a/sequoia/odata4-jpa-test/pom.xml
+++ b/sequoia/odata4-jpa-test/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>nl.buildforce.sequoia</groupId>
-    <artifactId>sequoia</artifactId>
+    <artifactId>Sequoia-parent</artifactId>
     <version>0.3.8-M0</version>
   </parent>
   <artifactId>odata4-jpa-test</artifactId>
@@ -15,10 +15,6 @@
       <url>file://${project.build.directory}/mvn-repo</url>
     </repository>
   </distributionManagement>
-  <properties>
-    <hibernate.version>5.4.10.Final</hibernate.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
   <dependencies>
     <dependency>
       <groupId>com.h2database</groupId>
