--- a/olingo/lib/pom.xml
+++ b/olingo/lib/pom.xml
@@ -54,13 +54,13 @@
 
   <build>
     <plugins>
-      <plugin>
+      <!--<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <configuration>
           <skip>false</skip>
         </configuration>
-      </plugin>
+      </plugin>-->
     </plugins>
   </build>
 
