--- a/olingo/lib/server-core/pom.xml
+++ b/olingo/lib/server-core/pom.xml
@@ -82,13 +82,13 @@
 
   <build>
     <plugins>
-      <plugin>
+     <!-- <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <configuration>
           <skip>false</skip>
         </configuration>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
