--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -39,7 +39,7 @@
     <commons.codec.version>1.14</commons.codec.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <commons.io.version>2.7</commons.io.version>
-    <jackson.version>2.11.0</jackson.version>
+    <!--<jackson.version>2.11.1</jackson.version>-->
     <olingo.deploy.skip>true</olingo.deploy.skip>
     <sl4j.version>2.0.0-alpha1</sl4j.version>
     <project.build.source>1.8</project.build.source>
@@ -282,52 +282,6 @@
   <profiles>
     <profile>
       <id>apache.deploy</id>
-      <properties>
-        <olingo.deploy.skip>false</olingo.deploy.skip>
-      </properties>
-    </profile>
-    <profile>
-      <id>apache-release</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>javadoc-jar</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>aggregate-jar</goal>
-                </goals>
-                <configuration>
-                  <excludePackageNames>nl.buildforce.olingo.commons.core:nl.buildforce.olingo.commons.core.*:nl.buildforce.olingo.client.core:nl.buildforce.olingo.client.core.*:nl.buildforce.olingo.server.core:nl.buildforce.olingo.server.core.*:nl.buildforce.olingo.fit:nl.buildforce.olingo.fit.*:nl.buildforce.olingo.server.sample:nl.buildforce.olingo.server.sample.*:nl.buildforce.olingo.server.tecsvc:nl.buildforce.olingo.server.tecsvc.*</excludePackageNames>
-                  <additionalJOptions>
-                    <additionalJOption>-quiet</additionalJOption>
-                  </additionalJOptions>
-                  <groups>
-                    <group>
-                      <title>OData Client</title>
-                      <packages>nl.buildforce.olingo.client.api:nl.buildforce.olingo.client.api.*</packages>
-                    </group>
-                    <group>
-                      <title>OData Client Proxy</title>
-                      <packages>nl.buildforce.olingo.ext.proxy:nl.buildforce.olingo.ext.proxy.*</packages>
-                    </group>
-                    <group>
-                      <title>OData Server</title>
-                      <packages>nl.buildforce.olingo.server.api:nl.buildforce.olingo.server.api.*</packages>
-                    </group>
-                    <group>
-                      <title>OData Commons</title>
-                      <packages>nl.buildforce.olingo.commons.api:nl.buildforce.olingo.commons.api.*</packages>
-                    </group>
-                  </groups>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
       <properties>
         <olingo.deploy.skip>false</olingo.deploy.skip>
       </properties>
