--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <artifactId>OData4-jpa-parent</artifactId>
     <version>1</version>
     <packaging>pom</packaging>
-
+    <properties>
+        <jackson.version>2.11.1</jackson.version>
+        <jakarta-servlet.version>5.0.0-M1</jakarta-servlet.version>
+    </properties>
     <modules>
       <module>olingo</module>
       <module>sequoia</module>
