--- a/sequoia/odata4-jpa-annotation/pom.xml
+++ b/sequoia/odata4-jpa-annotation/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>${eclipselink.prstnc.version}</version>
+			<version>${eclipselink.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
