--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
-    <version>1</version>
-    <packaging>pom</packaging>
+    <version>0</version>
     <modules>
         <module>olingo</module>
         <module>sequoia</module>
     </modules>
+    <packaging>pom</packaging>
     <properties>
-        <jpa-processor.version>0.3.8-M0</jpa-processor.version>
-        <jakarta-servlet.version>5.0.0</jakarta-servlet.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <odata4-jpa.version>0.0.0</odata4-jpa.version>
         <jackson.version>2.11.3</jackson.version>
+        <jakarta-servlet.version>5.0.0</jakarta-servlet.version>
         <project.build.source>1.8</project.build.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
