--- a/sequoia/odata4-jpa-annotation/pom.xml
+++ b/sequoia/odata4-jpa-annotation/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>nl.buildforce.sequoia</groupId>
 		<artifactId>Sequoia-parent</artifactId>
-		<version>0.3.8-M0</version>
+		<version>0.0.0</version>
 	</parent>
 	<artifactId>odata4-jpa-annotation</artifactId>
 	<name>odata4-jpa-annotation</name>
