--- a/sequoia/odata4-jpa-coverage/pom.xml
+++ b/sequoia/odata4-jpa-coverage/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>nl.buildforce.sequoia</groupId>
 		<artifactId>Sequoia-parent</artifactId>
-		<version>0.3.8-M0</version>
+		<version>0.0.0</version>
 	</parent>
 
 	<artifactId>odata4-jpa-coverage</artifactId>
@@ -59,10 +59,10 @@
 		</plugins>
 	</build>
 	<packaging>pom</packaging>
-	<distributionManagement>
+<!--	<distributionManagement>
 		<repository>
 			<id>internal</id>
 			<url>file://${project.build.directory}/mvn-repo</url>
 		</repository>
-	</distributionManagement>
+	</distributionManagement>-->
 </project>
