--- a/sequoia/odata4-jpa-metadata/pom.xml
+++ b/sequoia/odata4-jpa-metadata/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>nl.buildforce.sequoia</groupId>
         <artifactId>Sequoia-parent</artifactId>
-        <version>0.3.8-M0</version>
+        <version>0.0.0</version>
     </parent>
 
     <artifactId>odata4-jpa-metadata</artifactId>
