Feat: Versions bump. Tested working order.

--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
-    <version>0</version>
+    <version>0.0.1</version>
   </parent>
 
   <groupId>nl.buildforce.olingo</groupId>
   <artifactId>Olingo-parent</artifactId>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <packaging>pom</packaging>
 
   <name>Olingo-ODataV4 CapSelUI5</name>
@@ -297,7 +296,7 @@
       <properties>
         <cobertura.skip>false</cobertura.skip>
         <!-- nothing excluded -->
-        <exclude.regex></exclude.regex>
+        <exclude.regex />
       </properties>
     </profile>
   </profiles>
