--- a/sequoia/pom.xml
+++ b/sequoia/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
     <groupId>nl.buildforce.sequoia</groupId>
     <artifactId>Sequoia-parent</artifactId>
-    <version>0.0.0</version>
+    <version>0.0.1</version>
   <packaging>pom</packaging>
   <name>Sequoia JPA processor</name>
   <url>https://github.com/Buildforce/Olingo-odata4-jpa-processor</url>
@@ -12,7 +11,7 @@
   <parent>
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
-    <version>0</version>
+    <version>0.0.1</version>
   </parent>
 
   <modules>
@@ -32,11 +31,11 @@
   <properties>
     <coveralls.version>4.3.0</coveralls.version>
     <derby.version>10.15.2.0</derby.version>
-    <eclipselink.version>3.0.0-M1</eclipselink.version>
+    <eclipselink.version>3.0.0</eclipselink.version>
     <jacoco.version>0.8.5</jacoco.version>
-    <jakarta.persistence.api>3.0.0-RC2</jakarta.persistence.api>
+    <jakarta.persistence.api>3.0.0</jakarta.persistence.api>
     <maven.compiler.version>3.8.1</maven.compiler.version>
-    <odata.version>0.0.0</odata.version>
+    <odata.version>0.0.1</odata.version>
   </properties>
   <build>
     <pluginManagement>
@@ -99,7 +98,7 @@
       <id>build.quality</id>
       <properties>
         <cobertura.skip>false</cobertura.skip>
-        <exclude.regex></exclude.regex>
+        <exclude.regex />
       </properties>
     </profile>
   </profiles>
