--- a/olingo/server-api/pom.xml
+++ b/olingo/server-api/pom.xml
@@ -19,8 +19,7 @@
   under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>odata-server-api</artifactId>
@@ -30,7 +29,7 @@
   <parent>
     <groupId>nl.buildforce.olingo</groupId>
     <artifactId>Olingo-parent</artifactId>
-    <version>0.0.0</version>
+    <version>0.0.1</version>
     <relativePath>..</relativePath>
   </parent>
 
