--- a/olingo/pom.xml
+++ b/olingo/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>nl.buildforce.odata4-jpa</groupId>
     <artifactId>OData4-jpa-parent</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
   </parent>
 
   <groupId>nl.buildforce.olingo</groupId>
   <artifactId>Olingo-parent</artifactId>
-  <version>${odata4-jpa.version}</version>
+  <version>0.0.2</version>
   <packaging>pom</packaging>
 
   <name>Olingo-ODataV4 CapSelUI5</name>
@@ -52,11 +52,7 @@
         <artifactId>jackson-databind</artifactId>
         <version>${jackson.version}</version>
       </dependency>
-<!--      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>-->
+
       <dependency>
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-xml</artifactId>
@@ -66,13 +62,12 @@
         <groupId>com.fasterxml.jackson.jaxrs</groupId>
         <artifactId>jackson-jaxrs-json-provider</artifactId>
         <version>${jackson.version}</version>
-      </dependency>-->
+      </dependency>
       <dependency>
         <groupId>javax.xml.stream</groupId>
         <artifactId>stax-api</artifactId>
         <version>${stax.api.version}</version>
       </dependency>
-<!--
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
