--- a/sequoia/pom.xml
+++ b/sequoia/pom.xml
@@ -1,106 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <groupId>nl.buildforce.sequoia</groupId>
     <artifactId>Sequoia-parent</artifactId>
     <version>0.0.2</version>
-  <packaging>pom</packaging>
-  <name>Sequoia JPA processor</name>
-  <url>https://github.com/Buildforce/Olingo-odata4-jpa-processor</url>
+    <packaging>pom</packaging>
+    <name>Sequoia JPA processor</name>
+    <url>https://github.com/Buildforce/Olingo-odata4-jpa-processor</url>
 
-  <parent>
-    <groupId>nl.buildforce.odata4-jpa</groupId>
-    <artifactId>OData4-jpa-parent</artifactId>
-    <version>0.0.2</version>
-  </parent>
+    <parent>
+        <groupId>nl.buildforce.odata4-jpa</groupId>
+        <artifactId>OData4-jpa-parent</artifactId>
+        <version>0.0.2</version>
+    </parent>
 
-  <modules>
-    <module>odata4-jpa-annotation</module>
-    <module>odata4-jpa-coverage</module>
-    <module>odata4-jpa-metadata</module>
-    <module>odata4-jpa-processor</module>
-    <module>odata4-jpa-test</module>
-  </modules>
-  <distributionManagement>
-    <repository>
-      <id>bintray-serioussoftware-repo</id>
-      <name>serioussoftware-maven3</name>
-      <url>https://api.bintray.com/maven/serioussoftware/repo1/Sequoia/;publish=1</url>
-    </repository>
-  </distributionManagement>
-  <properties>
-    <coveralls.version>4.3.0</coveralls.version>
-    <derby.version>10.15.2.0</derby.version>
-    <eclipselink.version>3.0.0</eclipselink.version>
-    <jacoco.version>0.8.5</jacoco.version>
-    <jakarta.persistence.api>3.0.0</jakarta.persistence.api>
-    <maven.compiler.version>3.8.1</maven.compiler.version>
-    <odata.version>0.0.2</odata.version>
-    <odata4-jpa.version>0.0.2</odata4-jpa.version>
-  </properties>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M4</version>
-          <configuration>
+    <modules>
+        <module>odata4-jpa-annotation</module>
+        <module>odata4-jpa-coverage</module>
+        <module>odata4-jpa-metadata</module>
+        <module>odata4-jpa-processor</module>
+        <module>odata4-jpa-test</module>
+    </modules>
+    <distributionManagement>
+        <repository>
+            <id>bintray-serioussoftware-repo</id>
+            <name>serioussoftware-maven3</name>
+            <url>https://api.bintray.com/maven/serioussoftware/repo1/OData4-JPA/;publish=1</url>
+        </repository>
+    </distributionManagement>
+    <properties>
+        <coveralls.version>4.3.0</coveralls.version>
+        <derby.version>10.15.2.0</derby.version>
+        <eclipselink.version>3.0.0</eclipselink.version>
+        <jacoco.version>0.8.5</jacoco.version>
+        <jakarta.persistence.api>3.0.0</jakarta.persistence.api>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <odata.version>0.0.2</odata.version>
+        <odata4-jpa.version>0.0.2</odata4-jpa.version>
+    </properties>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                    <configuration>
+                        <properties>
+                            <!--<configurationParameters>junit.platform.output.capture.stdout = false</configurationParameters>-->
+                        </properties>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.version}</version>
+                    <configuration>
+                        <source>${project.build.source}</source>
+                        <target>${project.build.source}</target>
+                        <showWarnings>true</showWarnings>
+                        <showDeprecation>true</showDeprecation>
+                        <compilerArgument>-Xlint:unchecked</compilerArgument>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>${coveralls.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+    <profiles>
+        <profile>
+            <id>build.fast</id>
             <properties>
-              <!--<configurationParameters>junit.platform.output.capture.stdout = false</configurationParameters>-->
+                <checkstyle.skip>true</checkstyle.skip>
+                <exclude.regex>.*(proxy|client).*</exclude.regex>
+                <rat.skip>true</rat.skip>
+                <pmd.skip>true</pmd.skip>
             </properties>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven.compiler.version}</version>
-          <configuration>
-            <source>${project.build.source}</source>
-            <target>${project.build.source}</target>
-            <showWarnings>true</showWarnings>
-            <showDeprecation>true</showDeprecation>
-            <compilerArgument>-Xlint:unchecked</compilerArgument>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-    <plugins>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.version}</version>
-        <executions>
-          <execution>
-            <id>prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.eluder.coveralls</groupId>
-        <artifactId>coveralls-maven-plugin</artifactId>
-        <version>${coveralls.version}</version>
-      </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>build.fast</id>
-      <properties>
-        <checkstyle.skip>true</checkstyle.skip>
-        <exclude.regex>.*(proxy|client).*</exclude.regex>
-        <rat.skip>true</rat.skip>
-        <pmd.skip>true</pmd.skip>
-      </properties>
-    </profile>
-    <profile>
-      <id>build.quality</id>
-      <properties>
-        <cobertura.skip>false</cobertura.skip>
-        <exclude.regex />
-      </properties>
-    </profile>
-  </profiles>
+        </profile>
+        <profile>
+            <id>build.quality</id>
+            <properties>
+                <cobertura.skip>false</cobertura.skip>
+                <exclude.regex />
+            </properties>
+        </profile>
+    </profiles>
 </project>
