--- a/sequoia/odata4-jpa-processor/pom.xml
+++ b/sequoia/odata4-jpa-processor/pom.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>nl.buildforce.sequoia</groupId>
-		<artifactId>Sequoia-parent</artifactId>
-		<version>0.0.1</version>
-	</parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>nl.buildforce.sequoia</groupId>
+        <artifactId>Sequoia-parent</artifactId>
+        <version>0.0.1</version>
+    </parent>
 
-	<artifactId>odata4-jpa-processor</artifactId>
+    <artifactId>odata4-jpa-processor</artifactId>
 
-	<name>odata4-jpa-processor</name>
+    <name>odata4-jpa-processor</name>
 
-	<dependencies>
-		<dependency>
-			<groupId>jakarta.servlet</groupId>
-			<artifactId>jakarta.servlet-api</artifactId>
-			<version>${jakarta-servlet.version}</version>
-			<scope>provided</scope>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>${jakarta-servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>nl.buildforce.olingo</groupId>
-			<artifactId>odata-server-api</artifactId>
-			<version>${odata.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>nl.buildforce.olingo</groupId>
-			<artifactId>odata-server-core</artifactId>
-			<version>${odata.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>nl.buildforce.olingo</groupId>
+            <artifactId>odata-server-api</artifactId>
+            <version>${odata.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-metadata</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>nl.buildforce.sequoia</groupId>
-			<artifactId>odata4-jpa-test</artifactId>
-			<scope>test</scope>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>nl.buildforce.olingo</groupId>
+            <artifactId>odata-server-core</artifactId>
+            <version>${odata.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-metadata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nl.buildforce.sequoia</groupId>
+            <artifactId>odata4-jpa-test</artifactId>
+            <scope>test</scope>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
+
+    </dependencies>
 </project>
